feat(website): import react framework

--- a/tsconfigs/tsconfig.browser.json
+++ b/tsconfigs/tsconfig.browser.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "target": "esnext",
+    "jsx": "react-jsx",
     "lib": ["ES2019", "dom"],
     "customConditions": ["browser"],
     "module": "esnext",
