--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.3.2",
+    "@eslint-react/eslint-plugin": "^1.14.2",
     "@types/node": "^18.19.45",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router": "^5.1.20",
     "dprint": "^0.47.2",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   }
