--- a/website/package.json
+++ b/website/package.json
@@ -12,9 +12,14 @@
     "#~/*": "./src/*"
   },
   "dependencies": {
-    "@mono/utils": "workspace:*"
+    "@mono/utils": "workspace:*",
+    "foxact": "^0.2.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.26.2"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.4.0"
   }
 }
