chore: exclude browser and node spec files

--- a/tsconfigs/tsconfig.default.spec.json
+++ b/tsconfigs/tsconfig.default.spec.json
@@ -6,5 +6,11 @@
   "include": [
     "../packages/*/tests/**/*.ts",
     "../packages/*/tests/**/*.spec.ts"
+  ],
+  "exclude": [
+    "../packages/*/tests/**/*.browser.ts",
+    "../packages/*/tests/**/*.browser.spec.ts",
+    "../packages/*/tests/**/*.node.ts",
+    "../packages/*/tests/**/*.node.spec.ts"
   ]
 }
